Se agregaron comentarios especificando las paginas responsive y se dio formato al documento

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
     <title>InfoMotoblog 🏍</title>
 </head>
+<!--Esta pagina no responsive-->
 <body>
     <header>
         <!--navbar Inicia-->
@@ -50,25 +51,27 @@
     <main>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/img/Noticias1.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/Noticias 2.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/Noticias3.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630" >
-              </div>
+                <div class="carousel-item active">
+                    <img src="/img/Noticias1.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/Noticias 2.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/Noticias3.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </main>
     <h2 class="text-center text-white">Lo mas reciente 📆</h2>
     <section class="container-fluid text-center noticias">
@@ -76,53 +79,93 @@
             <article>
                 <h3 class="text-center">LA NUEVA YAMAHA FZ-X YA ESTÁ A LA VENTA: PRECIO Y CARACTERÍSTICAS</h3>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 1.jpg.jpg" alt="yamaha FZ-X">
-                <p>La nueva Yamaha FZ-X llega para ampliar la propuesta de la marca en la categoría street. Este modelo cuenta con excelentes prestaciones y un completo equipamiento que en conjunto con un diseño distintivo estilo neo-retro, le otorgan características destacadas dentro de su segmento.</p>
-                <p>Esta motocicleta expande la propuesta de la familia FZ, pero mantiene su esencia ya que comparte la plataforma del motor de 149 cc, alimentado por inyección electrónica y tecnología Blue Core.</p>
+                <p>La nueva Yamaha FZ-X llega para ampliar la propuesta de la marca en la categoría street. Este modelo
+                    cuenta con excelentes prestaciones y un completo equipamiento que en conjunto con un diseño
+                    distintivo estilo neo-retro, le otorgan características destacadas dentro de su segmento.</p>
+                <p>Esta motocicleta expande la propuesta de la familia FZ, pero mantiene su esencia ya que comparte la
+                    plataforma del motor de 149 cc, alimentado por inyección electrónica y tecnología Blue Core.</p>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 1,2.jpg.jpg" alt="yamaha FZ-X">
-                <p>La nueva Yamaha FZ-X está pensada para conductores que buscan un óptimo nivel de equipamiento, por eso cuenta con sistema de freno ABS, que proporciona una mayor optimización en el frenado y control de tracción TCS, que garantiza un mayor control y estabilidad en la conducción. También cuenta con disco de freno delantero y trasero los cuales proveen una excelente capacidad de frenado.</p>
+                <p>La nueva Yamaha FZ-X está pensada para conductores que buscan un óptimo nivel de equipamiento, por
+                    eso cuenta con sistema de freno ABS, que proporciona una mayor optimización en el frenado y control
+                    de tracción TCS, que garantiza un mayor control y estabilidad en la conducción. También cuenta con
+                    disco de freno delantero y trasero los cuales proveen una excelente capacidad de frenado.</p>
             </article>
             <article>
                 <h3 class="text-center">LLEGÓ LA HONDA NAVI, PRECIO Y CARACTERÍSTICAS DE LA NUEVA SUPER VENTAS</h3>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 2.jpg.jpg" alt="Honda navi">
-                <p>Honda Motor de Argentina continúa con su compromiso de sumar opciones para los seguidores de la marca y ofrecer productos siguiendo las tendencias del mercado con la última tecnología y calidad. Así se presenta la Honda NAVi, un producto distintivo dentro del line-up de la marca que crea un nuevo segmento ya que toma características de scooter y CUB, que se destaca por un estilo propio y autonomía, diseño, practicidad y customización.</p>
-                <p>La nueva Honda NAVi posee un motor de 109 centímetros cúbicos, 4 tiempos, 2 válvulas, monocilíndrico, OHC y refrigerado por aire que se caracteriza por su bajo costo de mantenimiento, confiabilidad y su excelente consumo. La transmisión es automática.</p>
+                <p>Honda Motor de Argentina continúa con su compromiso de sumar opciones para los seguidores de la marca
+                    y ofrecer productos siguiendo las tendencias del mercado con la última tecnología y calidad. Así se
+                    presenta la Honda NAVi, un producto distintivo dentro del line-up de la marca que crea un nuevo
+                    segmento ya que toma características de scooter y CUB, que se destaca por un estilo propio y
+                    autonomía, diseño, practicidad y customización.</p>
+                <p>La nueva Honda NAVi posee un motor de 109 centímetros cúbicos, 4 tiempos, 2 válvulas, monocilíndrico,
+                    OHC y refrigerado por aire que se caracteriza por su bajo costo de mantenimiento, confiabilidad y su
+                    excelente consumo. La transmisión es automática.</p>
             </article>
             <article>
                 <h3 class="text-center">Este 2024 llega la Aprilia RS 457</h3>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 3.jpg.jpg" alt="Aprilia RS 457">
-                <p>Aprilia ha querido incluir en su catálogo una deportiva destinada a usuarios del carnet A2 y que destaca por su relación peso-potencia, ya que tiene un peso de 175 kg en orden de marcha y ofrece una potencia de 47'5 CV. Esta hermana pequeña de la RS 660 cuenta con un nuevo motor de dos cilindros en línea con doble árbol de levas y cuatro válvulas por cilindro.</p>
-                <p>Además, cuenta con acelerador electrónico, tres modos de conducción y control de tracción ajustable y desconectable. El ABS de la rueda trasera también puede desconectarse según el modo de conducción que se elija. Aún no conocemos el precio de esta nueva Aprilia RS 457.</p>
+                <p>Aprilia ha querido incluir en su catálogo una deportiva destinada a usuarios del carnet A2 y que
+                    destaca por su relación peso-potencia, ya que tiene un peso de 175 kg en orden de marcha y ofrece
+                    una potencia de 47'5 CV. Esta hermana pequeña de la RS 660 cuenta con un nuevo motor de dos
+                    cilindros en línea con doble árbol de levas y cuatro válvulas por cilindro.</p>
+                <p>Además, cuenta con acelerador electrónico, tres modos de conducción y control de tracción ajustable y
+                    desconectable. El ABS de la rueda trasera también puede desconectarse según el modo de conducción
+                    que se elija. Aún no conocemos el precio de esta nueva Aprilia RS 457.</p>
             </article>
             <article>
                 <h3 class="text-center">Este 2024 lega la Kawasaki Ninja 500</h3>
-                <img class="img-fluid rounded" src="../img/Noticias articulo kawa 3.jpg (2).webp" alt="Kawasaki Ninja 500">
-                <p>Kawasaki también ha querido captar a usuarios del A2 con el lanzamiento de una nueva generación Ninja destinada a este carnet. La nueva Ninja 500 ofrece una estética que nos recuerda a sus hermanas mayores, con una apariencia más deportiva gracias a su frontal afilado y unos faros más pequeños. Eso sí, mantiene esa filosofía que busca una posición más cómoda que la que ofrecen las deportivas al contar con un manillar elevado y las estriberas ligeramente adelantadas. Esta comodidad del piloto se ve unida a un asiento bajo (785 mm del suelo) que la hace accesible a pilotos de cualquier talla.</p>
-                <p>Incluye un nuevo motor bicilíndrico de 451 cc y ocho válvulas que ofrece una potencia de 45'4 CV a 9.000 rpm y un par máximo de 42'6 Nm. Cuenta con embrague asistido y antirrebote pero no tiene control de tracción. Los cambios de la Ninja 500 2024 los encontramos en los frenos: los discos ya no son lobulados pero sí que mantienen las medidas, 310 mm los delanteros con pinza axial de doble pistón y 220 mm detrás con pinza de un único pistón.</p>
+                <img class="img-fluid rounded" src="../img/Noticias articulo kawa 3.jpg (2).webp"
+                    alt="Kawasaki Ninja 500">
+                <p>Kawasaki también ha querido captar a usuarios del A2 con el lanzamiento de una nueva generación Ninja
+                    destinada a este carnet. La nueva Ninja 500 ofrece una estética que nos recuerda a sus hermanas
+                    mayores, con una apariencia más deportiva gracias a su frontal afilado y unos faros más pequeños.
+                    Eso sí, mantiene esa filosofía que busca una posición más cómoda que la que ofrecen las deportivas
+                    al contar con un manillar elevado y las estriberas ligeramente adelantadas. Esta comodidad del
+                    piloto se ve unida a un asiento bajo (785 mm del suelo) que la hace accesible a pilotos de cualquier
+                    talla.</p>
+                <p>Incluye un nuevo motor bicilíndrico de 451 cc y ocho válvulas que ofrece una potencia de 45'4 CV a
+                    9.000 rpm y un par máximo de 42'6 Nm. Cuenta con embrague asistido y antirrebote pero no tiene
+                    control de tracción. Los cambios de la Ninja 500 2024 los encontramos en los frenos: los discos ya
+                    no son lobulados pero sí que mantienen las medidas, 310 mm los delanteros con pinza axial de doble
+                    pistón y 220 mm detrás con pinza de un único pistón.</p>
                 <a href="#">Saber mas</a>
             </article>
             <article>
-                <h3 class="text-center">LA CFMOTO NK MÁS ACCESIBLE HASTA HOY: EICMA VERÁ NACER A LA NAKED CHINA MÁS PEQUEÑA, PERO PODEROSA</h3>
-                <p>El Salón EICMA de Milán 2023 está literalmente a la vuelta de la esquina y marcas como CFMoto ya tienen listas sus novedades de cara a la próxima temporada. Entre esos planes, que incluyen motos en gamas MT y NK, se encuentra la nueva 125 NK con imagen heredada de sus hermanas mayores. </p>
+                <h3 class="text-center">LA CFMOTO NK MÁS ACCESIBLE HASTA HOY: EICMA VERÁ NACER A LA NAKED CHINA MÁS
+                    PEQUEÑA, PERO PODEROSA</h3>
+                <p>El Salón EICMA de Milán 2023 está literalmente a la vuelta de la esquina y marcas como CFMoto ya
+                    tienen listas sus novedades de cara a la próxima temporada. Entre esos planes, que incluyen motos en
+                    gamas MT y NK, se encuentra la nueva 125 NK con imagen heredada de sus hermanas mayores. </p>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 3.jpg.webp" alt="CFMOTO  125">
-                <p>Previo al lanzamiento en el gran evento italiano, se filtró a la red una imagen teaser de esta naked pequeña y accesible de la firma china. Curiosamente, hace unos días paso exactamente lo mismo con la nueva 450 MT, la trail mediana que se suma a la exitosa saga MT de la firma china para ofrecer una variante mucho más accesible en cuanto a precio respecto a las variantes ya existentes.</p>
-                <p>El segmento naked, y especialmente en las más bajas cilindradas (hasta 300 cc), goza de una popularidad creciente y cuenta con una amplia gama de opciones entre las que marcas como KTM (125 y 250 Duke) dominan. En este caso, CFMoto quiere pisar fuerte en esta rama del mercado con esta nueva 125.</p>
-                <p>Para impulsar a esta nueva 125 NK, CFMoto podría estrenar un nuevo motor. Actualmente en la gama de la firma se encuentra la Papio, que utiliza un bloque de 125cc refrigerado por aire que no alcanza para competir con las reinas del segmento naked. Para eso, el nuevo 125 de CFMoto sería alimentado por inyección electrónica y refrigerado por líquido, capaz de rendir unos interesantes 15 CV.</p>
+                <p>Previo al lanzamiento en el gran evento italiano, se filtró a la red una imagen teaser de esta naked
+                    pequeña y accesible de la firma china. Curiosamente, hace unos días paso exactamente lo mismo con la
+                    nueva 450 MT, la trail mediana que se suma a la exitosa saga MT de la firma china para ofrecer una
+                    variante mucho más accesible en cuanto a precio respecto a las variantes ya existentes.</p>
+                <p>El segmento naked, y especialmente en las más bajas cilindradas (hasta 300 cc), goza de una
+                    popularidad creciente y cuenta con una amplia gama de opciones entre las que marcas como KTM (125 y
+                    250 Duke) dominan. En este caso, CFMoto quiere pisar fuerte en esta rama del mercado con esta nueva
+                    125.</p>
+                <p>Para impulsar a esta nueva 125 NK, CFMoto podría estrenar un nuevo motor. Actualmente en la gama de
+                    la firma se encuentra la Papio, que utiliza un bloque de 125cc refrigerado por aire que no alcanza
+                    para competir con las reinas del segmento naked. Para eso, el nuevo 125 de CFMoto sería alimentado
+                    por inyección electrónica y refrigerado por líquido, capaz de rendir unos interesantes 15 CV.</p>
                 <a class="" href="#">Saber mas</a>
             </article>
             <article>
                 <h3 class="text-center">Royald Enfield Super Meteor 650</h3>
-                <img class="img-fluid rounded"
-                    src="../img/Noticias articulo 4.1.jpg.jpg"
+                <img class="img-fluid rounded" src="../img/Noticias articulo 4.1.jpg.jpg"
                     alt="Royale enfield Super Meteor 650">
-                    <p>Llego el nuevo modelo custom Cruiser de Royald Enfield a la Argentina. Un moedelo pensado y diseñado para salir a la ruta y disfrutar del sonido y andar de su motor 650</p>
-                    <img class="img-fluid rounded"
-                    src="../img/Noticias articulo 4.jpg.jpg"
+                <p>Llego el nuevo modelo custom Cruiser de Royald Enfield a la Argentina. Un moedelo pensado y diseñado
+                    para salir a la ruta y disfrutar del sonido y andar de su motor 650</p>
+                <img class="img-fluid rounded" src="../img/Noticias articulo 4.jpg.jpg"
                     alt="Royale enfield Super Meteor 650">
-                    <p>Cuenta con un motor bicilindrico en paralelo de 648cc de 47ps y 52.3Nm de par que ofrece transiciones de marcha perfecta, una fuerte aceleracion de gama baja y una respuesta del acelerador sin esfuerzo</p>
+                <p>Cuenta con un motor bicilindrico en paralelo de 648cc de 47ps y 52.3Nm de par que ofrece transiciones
+                    de marcha perfecta, una fuerte aceleracion de gama baja y una respuesta del acelerador sin esfuerzo
+                </p>
             </article>
         </div>
     </section>
-
     <footer>
         <p>Todos los derechos reservados por copyright</p>
         <div class="redes">
@@ -138,16 +181,14 @@
             <a href="">
                 <i class="fa-solid fa-location-dot"></i>
             </a>
-        </div>
+        </div>  
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
