--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
     <title>InfoMotoblog 🏍</title>
 </head>
-
+<!--Pagina responsiva-->
 <body>
     <header>
         <!--navbar Inicia-->
@@ -60,32 +60,29 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/dainese_apertura.jpg" class="d-block w-100" alt="..."
-                    width="1000" height="630">
+                    <img src="/img/dainese_apertura.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/ropa-moto.jpg" class="d-block w-100" alt="..."
-                    width="1000" height="630">
+                    <img src="/img/ropa-moto.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="..."
-                    width="1000" height="630">
+                    <img src="/img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
-    </div>  
-    <h2 class="text-center text-white">Conoce la indumentaria para cada segmento</h2>
-    <div class="galeria">
-        <div class="item item1"></div>
+        <h2 class="text-center text-white">Conoce la indumentaria para cada segmento</h2>
+        <div class="galeria">
+            <div class="item item1"></div>
             <div class="item item2"></div>
             <div class="item item3"></div>
             <div class="item item4"></div>
@@ -93,7 +90,7 @@
             <div class="item item6"></div>
             <div class="item item7"></div>
             <div class="item item8"></div>
-    </div>
+        </div>
     </main>
     <footer>
         <p>Todos los derechos reservados por copyright</p>
