Se corrigio las rutas de las url de los archivos multimedia

--- a/pages/equipamento.html
+++ b/pages/equipamento.html
@@ -49,7 +49,7 @@
         <!--nabvar fin-->
     </header>
     <main>
-        <video src="/video/bike_-_113321 (540p).mp4" loop autoplay></video>
+        <video src="../video/bike_-_113321 (540p).mp4" loop autoplay></video>
         <h2 class="text-center text-white">Equipamento</h2>
         <div class="galeria">
             <div class="item" id="img1"></div>
