--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -60,13 +60,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/dainese_apertura.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/dainese_apertura.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/ropa-moto.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/ropa-moto.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="..." width="1000" height="630">
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
