Se arego un texto en los alt de las imagenes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </article>
             <article class="col-sm-4 col-md-6">
                 <h3 class="text-center">Tecnicas de manejo</h3>
-                <img class="img-fluid rounded" src="./img/lorenzo-833726_1280.jpg" alt="Primera moto">
+                <img class="img-fluid rounded" src="./img/lorenzo-833726_1280.jpg" alt="Moto gp">
                 <h4>Control del campo de visión al conducir una moto</h4>
                 <p>Cuando se conduce una moto es indispensable desarrollar la visión periférica. Los seres humanos
                     tenemos un campo de visión de 180º; sin embargo, durante la actividad de la conducción, así como en
@@ -148,7 +148,7 @@
             </article>
             <article class="col-sm-4 col-md-6">
                 <h3 class="text-center">Motoviajeros</h3>
-                <img class="img-fluid rounded" src="./img/Home_quien_soy_800x.webp" alt="Primera moto">
+                <img class="img-fluid rounded" src="./img/Home_quien_soy_800x.webp" alt="Motoviajero Charly">
                 <p>El mototurismo o motoaventura es un formato de turismo que reúne la aventura, destreza y la
                     convivencia, dentro de un marco de desafío personal, con la libertad y la diversidad lleva a una
                     persona a lo largo de las rutas que son menos tráfico con destino que llevan a las puertas de los
@@ -158,7 +158,7 @@
             </article>
             <article class="col-sm-4 col-md-6">
                 <h3 class="text-center">Top 5 de las mejores motos de trabajo</h3>
-                <img class="img-fluid rounded" src="./img/bajaj-boxer-150.jpg" alt="Primera moto">
+                <img class="img-fluid rounded" src="./img/bajaj-boxer-150.jpg" alt="Bajaj boxer 150">
                 <p>Conoce las 5 mejores motos de trabajo y las mas recomendadas en este 2024</p>
                 <a href="#">Saber mas</a>
             </article>
@@ -166,7 +166,7 @@
                 <h3 class="text-center">Concejos</h3>
                 <img class="img-fluid rounded"
                     src="./img/mujer-poniendose-casco-viaje-carretera-motocicleta_23-2149023868.avif"
-                    alt="Primera moto">
+                    alt="Mujer ajustando su casco">
             </article>
         </div>
     </section>
