--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -52,13 +52,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/Noticias1.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/Noticias1.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Noticias 2.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/Noticias 2.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="1000" height="630">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Noticias3.jpg.jpg" class="d-block w-100" alt="..." width="1000" height="630">
+                    <img src="../img/Noticias3.jpg.jpg" class="d-block w-100" alt="Conferencia" width="1000" height="630">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
