Se agrego valor al href del boton de ver mas en el jumbotron

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <div class="call">
                 <h1>Tu mejor opcion</h1>
                 <p>Conoce tu mejor opcion de moto por tu estatura y peso.</p>
-                <a href="#">Ver mas</a>
+                <a href="#curiosidades">Ver mas</a>
             </div>
         </div>
         <!--jumbotron fin-->
     </main>
     <h2 class="text-center text-white">Curiosidades 🚦</h2>
-    <section class="container-fluid curiosidades">
+    <section class="container-fluid curiosidades" id="curiosidades" >
         <div class="row">
             <article class="col-sm-4 col-md-6">
                 <h3 class="text-center">La primera motocicleta</h3>
